@@ -25,7 +25,5 @@
                 Copyright &copy; 2014,  <a href="mailto:someone@somewhere.com">Me</a>.
             </div>
         </div>
-        <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script> 
-        <script type="text/javascript" src="js/lightbox.min.js"></script> 
     </body>
 </html>
