@@ -1,0 +1,8 @@
+
+<div id="players">
+    <p>List of Players:</p>
+    {players}
+    {Player}
+    {Peanuts}
+    {/players}
+</div>
