@@ -41,7 +41,6 @@ li a:hover {
 
 
 #players {
-    margin-top:100px;
     border: 1px solid black;
     width:49%;
     float: right;
@@ -53,6 +52,7 @@ li a:hover {
    position:absolute;
    bottom:0;
    width:100%;
-   height:60px;   /* Height of the footer */
-   background:#6cf;
+   height:60px;
+   color: white;
+   background:#333;
 }
